2003-11-16  Michael Yount <csf@moscow.com>

	* lib/Mj/Addr.pm:  (_validate)  Bugfix:  Return the full domain.
	Thanks to Roger Klorese.

2003-11-12  Michael Yount <csf@moscow.com>

	* lib/Mj/BounceHandler.pm:  (handle_bounce_message)  Override
	the address found by the parser with the VERP address if
	necessary.
	(handle_bounce_removal)  Bugfix:  Convert the address from 
	an object to a string when substituting.
	Thanks to Roger Klorese and Jeff Wasilko.

2003-11-08  Michael Yount <csf@moscow.com>

	* lib/Mj/MailOut.pm:  (welcome)  Increase the message count
	only if a welcome file has already been processed.
	Thanks to Roger Klorese.

2003-11-04  Michael Yount <csf@moscow.com>

	* lib/Majordomo.pm:  Version number is now 0.1200311040.
	(_createlist)  Pass the domain name to the shell hook.

	* lib/Mj/BounceHandler.pm:  (_hbr_noprobe)  Pass the
	domain, list, and user to the shell hook.

	* lib/Mj/Resend.pm:  (_r_strip_body)  Add missing ops
	for perl 5.8.1 compatibility.  Warn if an error occurs
	in the filtering code.

2003-11-03  Michael Yount <csf@moscow.com>

	* setup/install_util.pl:  (copy_file)  If a link was requested
	and the Mj2 and CGI directories occupy different partitions,
	use a symbolic link.
	Thanks to Eric Sorenson.

2003-11-02  Michael Yount <csf@moscow.com>

	* lib/Mj/Addr.pm:  (_xform)  Add safe ops for perl 5.8.1
	compatability.

	* lib/Mj/Resend.pm:  (_check_header, _check_body, _r_strip_body)
	Add safe ops for perl 5.8.1 compatibility.

	* lib/Mj/Util.pm:  (process_rule, re_match)  Add safe ops
	for perl 5.8.1 compatibility.
	Thanks to Brock Rozen.

2003-11-01  Michael Yount <csf@moscow.com>

	* Makefile.PL:  Compensate for changes in the MakeMaker
	installbin routine.  Thanks to Devin Reade.

2003-10-29  Michael Yount <csf@moscow.com>

	* lib/Mj/MIMEParser.pm:  (parse_open)  Bugfix:  Call
	parse_in() instead of parse_open() as needed to allow
	Mj2 to work with MIME::Tools version 4 again.
